技术组件-concurrency组件一期调整